hphp/test/quick/ppl.php.expectf
Fatal error: Classes, interfaces, and traits cannot have duplicate modifiers in %s/ppl.php on line 7
